# franksintra

./: .gitignore  main.py  pyproject.toml  test.py
api/router/: chat_route.py  set_metadata_route.py  voice_route.py
api/schemas/: chat_body.py  metadat_schema.py  metadata_schema.py
src/: hyper_parameters.py
src/config/: config_chat_model.py  config_cloudinary.py
src/controller/: agent_controller.py  chat_controller.py
src/services/: data_processor.py  delete_path.py  metada_seter.py  prompt_templete.py  session_store.py
src/tools/: create_quote.py  database_tools.py  quote_tool.py  user_contact_info.py
