[project]
name = "franksintra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "openai>=2.38.0",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pyexiftool>=0.5.6",
    "requests>=2.34.2",
]
